Fix some text of the button is not visible (#103)

--- a/angularjs/manage/list.directive.less
+++ b/angularjs/manage/list.directive.less
@@ -1,7 +1,4 @@
 .manageCustomDimensions {
-    .info {
-        color: @color-silver;
-    }
 
     .dataTable {
         max-width: 1000px;
